[project]
name = "bootcamp-secondclass"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeferson Almeida",email = "jeferson.live11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "bootcamp_secondclass", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
